fix thumbnail squish and filter placeholder on max slider (#120)

--- a/application/stylesheets/results.css
+++ b/application/stylesheets/results.css
@@ -140,7 +140,6 @@ main {
 
 #main-body .thumbnail {
     display: block;
-    overflow: hidden;
     width: 150px;
     height: 150px;
     background-color: transparent;
